# longest-word

./: pyproject.toml  wsgi.py
src/longest_word/: game.py
tests/: test_game.py
