[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["nagelarenata <nagela1999@gmail.com>"]
readme = "README.md"
packages = [
    { include = "longest_word", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pylint = "^3.3.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

